--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -48,6 +48,7 @@
 .btn-grey:focus, .selected{
     background-color: var(--color-primary);
     border: 2px solid var(--color-primary);
+    color: var(--color-grey-7);
 }
 
 .btn-greyDark{
