--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -28,12 +28,16 @@
     width: 35.625rem;
 }
 
+#filterContainer{
+    position: relative;
+
+}
 #filterMenu {
     overflow-x: hidden;   
 
-    position: relative;
 
     margin: 30px auto;
+    scroll-behavior: smooth
 }
 
 #next{
