--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -76,6 +76,12 @@
     width: 48%;
 }
 
+.card > img{
+    width: 100%;
+    height: 11.25rem;
+    object-fit: cover;
+}
+
 footer{
     padding: 5.5rem 0;
 }
